# sample-app-aoai-chatGPT

./: .azureignore  .dockerignore  .env  .env.initial  .env.sample  .env.template  .flake8  .gitignore  .hintrc  .mergify.yml  .pre-commit-config.yaml  Dockerfile  Lained.env  NJ_README.md  README.md  README_azd.md  README_docupload.md  README_old.md  SUPPORT.md  Starlight-Chat-Assistant.PublishSettings  TEST_CASE_FLOWS.md  WebApp.Dockerfile  WebApp.dockerignore  app.py  auth.py  azure-openai-features.md  azure-pipelines.yml  azure.yaml  credentials.env  debug_backend.ps1  deploy.sh  deploy_to_azure.sh  deploymentBuild.sh  docker-compose.debug.yml  docker-compose.yml  env.json  func.py  gunicorn.conf.py  link.txt  main.py  (+19 more)
.azure-pipelines/: azure-pipelines.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
ClientPortal.FrontEnd/: .browserslistrc  .env.development  .env.production  .env.vs  .eslintrc  .lintstagedrc  .npmrc.example  .prettierignore  .prettierrc  ClientPortal.FrontEnd.esproj  index.html  nginx.conf  package.json  playwright.config.ts  playwright.snapshot.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
backend/: appinsightsmiddleware.py  conversationtelemetry.py  google.py  prompt_type.py  settings.py  system-prompt.txt  tracing.py  utils.py
configuration-snippets/: chat-setup.json  nycbusiness-vector-index.json
frontend/: .env.local  .env.sample  .eslintrc.json  .prettierignore  .prettierrc.json  README-TTD.md  eslint.config.ts  index.html  index.json  jest.config.ts  jestSetup.js  package-lock.json  (+8 more)
(+1229 files in other folders)
